# my_rust_lib

./: .gitignore  Cargo.toml  README.md  build.rs  ccargo-tree-for-plotters.txt  test.txt
.cargo/: config.toml
.github/workflows/: clippy.yml  integration_tests.yml  run_all_tests.yml  run_clippy.yml  rust.yml  unit_tests.yml
.vscode_template/: launch.json
add-one/: Cargo.toml
add-one-lib/: Cargo.toml
add-one-lib/src/: foo.rs  lib.rs
add-one/src/: lib.rs
adder/: Cargo.toml
adder/src/: main.rs
aliases/: bash_profile.sh  cc.bat  clp.bat  cr.bat  crr.bat  ct.bat  cta.bat  ctp.bat  ta.bat  tp.bat
benches/: my_benchmark.rs
best-practices/: readme.md
cargo-timings/: cargo-timing-20240122T062905Z.html
config/global-constants/: Cargo.toml
docs/: faster_builds_with_linker_config.md  faster_builds_with_sccache.md  how_to_debug_rust.md
examples/: bench.rs  file_sum_time_logs.rs  hello.rs  maze_1d.rs
examples/maze-1d-with-cargo-toml/: Cargo.toml  main.rs
files/: time_log.txt
src/: api.rs  array.rs  array_slice_unpack.rs  async_.rs  async_closure.rs  averaged_collection.rs  break_.rs  cacher.rs  cargo_expand.rs  catch_unwind.rs  cfg.rs  cfg_if.rs  closure.rs  compile_vs_runtime_read_env_and_file.rs  concurrency.rs  const_fn.rs  const_generics_lifetimes.rs  conversions.rs  copy_vs_move.rs  cow.rs  ctor_chain.rs  default.rs  deref.rs  deref_coercion.md  doc_test.rs  drop_aka_dtor.rs  dyn.rs  dynamically_sized_types.rs  enum.rs  env.vars.rs  env_logger.rs  env_vars.rs  environment_variable.rs  error_handling.rs  func_ptr.rs  generics.rs  hash_map_set.rs  int_overflow.rs  interior_mutability.rs  iterators.rs  (+73 more)
src/add-one-lib/: Cargo.toml
src/add-one-lib/src/: foo.rs  lib.rs
src/adder/: Cargo.toml
src/adder/src/: main.rs
src/algo-data/: Cargo.toml
src/algo-data/src/: array_two_sum.rs  bit_count_set_bits.rs  dag_directed_acyclic_graph.rs  graph.rs  lib.rs  linked_list_del_nth_node.rs  list_del_nth_node.rs  list_find_common_tail.rs  matrix_set_bits_at_row_column.rs  maze_1d_array.rs  sort_quick_aka_part_sort.rs  string_len_longest_substr_w_nonrepeat_chars.rs  string_longest_substr_w_nonrepeat_chars.rs  todo-linked_list_reverse.rs  todo_list_w_enum.rs  todo_maze_2d_array.rs  tree.rs  tree_1_max_height.rs  tree_max_height.rs  tree_print.rs  tree_serial_deserialize.rs  trie.rs
src/clap-cmd-line-parser/: Cargo.toml
src/clap-cmd-line-parser/src/: main.rs
src/integration_tests/: calc_test.rs  mod.rs
src/web-server-async-and-parallel/: 404.html  Cargo.toml
src/web-server-async-and-parallel/src/: main.rs
src/web-server-multi-threaded/: Cargo.toml
src/web-server-multi-threaded/src/: lib.rs  main.rs
web-server-multi-threaded/: Cargo.toml
web-server-multi-threaded/src/: main.rs
