[package]
name = "my_rust_lib"
version = "0.1.0"
authors = ["Gokhan Simsek <g.simsek@paralect.com>"]
edition = "2021"

# Ref:
# From Rust Programming Language
# by Steve Klabnik and Carol Nichols (Covers Rust 2018) - 2019

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
chrono = "0.4.31"
env_logger = "0.10.2"
futures = "0.3"
log = "0.4" # for env_logger
rayon = "1.7.0"
reqwest = { version = "0.11" }
serde = "1"
serde_cbor = "0.8"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1.23.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[workspace]
members = [
  "src/adder",
  "src/add-one-lib",
  "src/clap-cmd-line-parser",
  "src/web-server-multi-threaded",
  "src/web-server-async-and-parallel",
]

## examples/hello.rs works with `cargo r --example hello` without this section
# [[example]]
# name = "hello"

# New sytnax: since rust 1.64
# https://doc.rust-lang.org/nightly/cargo/reference/workspaces.html
[workspace.dependencies]
# Using aliased dependency import syntax
rand_alias = { package = "rand", version = "0.3.14" }
add-one-lib = { path = "src/add-one-lib" }
clap = "4.0.32"

# Using features (aka conditional compilation with cfg)
[features]
foo = [] # feature has no explicit dependencies
aa = [] # feature has no explicit dependencies

# Todo: how to use them?
# Compile time env. vars
# To use at runtime, ss .cargo/config.toml
[env]
RUST_BACKTRACE="1"
AA=1
BB=true
FOO = "bar"
XX = 42
PATH_TO_SOME_TOOL = { value = "bin/tool", relative = true }
USERNAME = { value = "test_user", force = true }

# # All workspace members should inherit these keys for package declarations.
# [workspace.package]
# authors = ["Aptos Labs <opensource@aptoslabs.com>"]
# edition = "2021"
# homepage = "https://aptoslabs.com"
# license = "Apache-2.0"
# publish = false
# repository = "https://github.com/aptos-labs/aptos-core"
# rust-version = "1.64"

# [workspace.dependencies]
# aptos-global-constants = { path = "config/global-constants" }


## -------------------------------------------------


[profile.release]
opt-level = 3     # Optimize for speed
# opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[profile.dev]
opt-level = 0
debug = true
# split-debuginfo = "unpacked" # Requires macOS ?
lto = false
incremental = true
