[package]
name = "add-one-lib"
version = "0.1.0"
# edition = "2021"

# # Workspace inherited keys
# authors = { workspace = true }
# edition = { workspace = true }
# homepage = { workspace = true }
# license = { workspace = true }
# publish = { workspace = true }
# repository = { workspace = true }
# rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.3.14"
# New sytnax: since rust 1.64
rand = { workspace = true }

# #usefoo
[features]
use-foo = []